# slurm_webserver

./: .gitignore  Cargo.toml  env.example
src/: db.rs  main.rs  schema.rs
src/acct/: model.rs  routes.rs
src/acct_coord/: model.rs  routes.rs
src/cluster/: model.rs  routes.rs
src/cluster_assoc/: model.rs  routes.rs
src/cluster_assoc_usage_day/: model.rs  routes.rs
src/cluster_assoc_usage_hour/: model.rs  routes.rs
src/cluster_assoc_usage_month/: model.rs  routes.rs
src/cluster_event/: model.rs  routes.rs
src/cluster_job/: model.rs  routes.rs
src/cluster_last_ran/: model.rs  routes.rs
src/cluster_resv/: model.rs  routes.rs
src/cluster_step/: model.rs  routes.rs
src/cluster_suspend/: model.rs  routes.rs
src/cluster_usage_day/: model.rs  routes.rs
src/cluster_usage_hour/: model.rs  routes.rs
src/cluster_usage_month/: model.rs  routes.rs
src/cluster_wckey/: model.rs  routes.rs
src/cluster_wckey_usage_day/: model.rs  routes.rs
src/cluster_wckey_usage_hour/: model.rs  routes.rs
src/cluster_wckey_usage_month/: model.rs  routes.rs
src/user/: model.rs  routes.rs
static/templates/: user.html
