[package]
name = "slurm_web"
version = "0.1.0"
authors = ["Floyd Z"]

# to get the async feature
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webserver
actix-web = "2"
actix-rt = "1"
handlebars = "2.0.4"

# DB manager
diesel = { version = "1.4.3", features = ["mysql", "r2d2", "chrono", "64-column-tables"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.8"

# std logging
log = "0.4.8"
env_logger = "0.7.1"

# reader
dotenv = "0.15"
lazy_static = "1.4"
listenfd = "0.3.3"
serde = "1.0.48"
serde_json = "1.0.48"

# helpers
chrono = { version = "0.4", features = ["serde"] }